Fix alignment at top / bottom of main img set

--- a/styles/_gallery.scss
+++ b/styles/_gallery.scss
@@ -14,6 +14,12 @@
         display: flex;
         flex-wrap: wrap;
 
+        margin: 0 auto;
+
+        @include md {
+            width: 90%;
+        }
+
         img {
             width: 100%;
             margin: auto;
@@ -25,9 +31,18 @@
         flex-basis: 100%;
         display: flex;
         flex-direction: column;
+        justify-content: space-between;
 
         @include md {
             flex-basis: 33%;
+        }
+
+        img:first-of-type {
+            margin-top: 0;
+        }
+
+        img:last-of-type {
+            margin-bottom: 0;
         }
     }
 
